--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
   <section class="designs">
     <div class="designs-container">
       <div class="designs-slider">
-        <img src="images1/design1.jpg" alt="Design 1">
+        <img src="https://github.com/mohamedashraf112233/Mohamed/blob/main/images1/Design1.jpg" alt="Design 1">
         <img src="images1/design2.jpg" alt="Design 2">
         <img src="images1/design3.jpg" alt="Design 3">
         <img src="images1/design4.jpg" alt="Design 4">
