--- a/index.html
+++ b/index.html
@@ -314,14 +314,14 @@
     <div class="designs-container">
       <div class="designs-slider">
         <img src="images1/Design1.jpg" alt="Design 1">
-        <img src="images1/design2.jpg" alt="Design 2">
-        <img src="images1/design3.jpg" alt="Design 3">
-        <img src="images1/design4.jpg" alt="Design 4">
-        <img src="images1/design5.jpg" alt="Design 5">
-        <img src="images1/design6.jpg" alt="Design 6">
-        <img src="images1/design7.jpg" alt="Design 7">
-        <img src="images1/design8.jpg" alt="Design 8">
-        <img src="images1/design9.jpg" alt="Design 9">
+        <img src="images1/Design2.jpg" alt="Design 2">
+        <img src="images1/Design3.jpg" alt="Design 3">
+        <img src="images1/Design4.jpg" alt="Design 4">
+        <img src="images1/Design5.jpg" alt="Design 5">
+        <img src="images1/Design6.jpg" alt="Design 6">
+        <img src="images1/Design7.jpg" alt="Design 7">
+        <img src="images1/Design8.jpg" alt="Design 8">
+        <img src="images1/Design9.jpg" alt="Design 9">
       </div>
     </div>
   </section>
@@ -329,15 +329,15 @@
   <section class="designs">
     <div class="designs-container">
       <div class="designs-slider">
-        <img src="images2/design1.png" alt="Design 1">
-        <img src="images2/design2.png" alt="Design 2">
-        <img src="images2/design3.png" alt="Design 3">
-        <img src="images2/design4.png" alt="Design 4">
-        <img src="images2/design5.png" alt="Design 5">
-        <img src="images2/design6.png" alt="Design 6">
-        <img src="images2/design7.png" alt="Design 7">
-        <img src="images2/design8.png" alt="Design 8">
-        <img src="images2/design9.png" alt="Design 9">
+        <img src="images2/Design1.png" alt="Design 1">
+        <img src="images2/Design2.png" alt="Design 2">
+        <img src="images2/Design3.png" alt="Design 3">
+        <img src="images2/Design4.png" alt="Design 4">
+        <img src="images2/Design5.png" alt="Design 5">
+        <img src="images2/Design6.png" alt="Design 6">
+        <img src="images2/Design7.png" alt="Design 7">
+        <img src="images2/Design8.png" alt="Design 8">
+        <img src="images2/Design9.png" alt="Design 9">
       </div>
     </div>
 <!-- الجملة تحت المربع الأول -->
@@ -348,21 +348,21 @@
   <!-- المربع الثاني للصور المتحركة -->
   <div class="designs-container">
     <div class="designs-slider">
-      <img src="images3/design1.png" alt="Design 1">
-      <img src="images3/design2.png" alt="Design 2">
-      <img src="images3/design4.png" alt="Design 4">
-      <img src="images3/design5.png" alt="Design 5">
-      <img src="images3/design6.png" alt="Design 6">
-      <img src="images3/design7.png" alt="Design 7">
-      <img src="images3/design8.png" alt="Design 8">
-      <img src="images3/design9.png" alt="Design 9">
-      <img src="images3/design10.png" alt="Design 10">
-      <img src="images3/design11.png" alt="Design 11">
-      <img src="images3/design12.png" alt="Design 12">
-      <img src="images3/design13.png" alt="Design 13">
-      <img src="images3/design14.png" alt="Design 14">
-      <img src="images3/design15.png" alt="Design 15">
-      <img src="images3/design16.png" alt="Design 16">
+      <img src="images3/Design1.png" alt="Design 1">
+      <img src="images3/Design2.png" alt="Design 2">
+      <img src="images3/Design4.png" alt="Design 4">
+      <img src="images3/Design5.png" alt="Design 5">
+      <img src="images3/Design6.png" alt="Design 6">
+      <img src="images3/Design7.png" alt="Design 7">
+      <img src="images3/Design8.png" alt="Design 8">
+      <img src="images3/Design9.png" alt="Design 9">
+      <img src="images3/Design10.png" alt="Design 10">
+      <img src="images3/Design11.png" alt="Design 11">
+      <img src="images3/Design12.png" alt="Design 12">
+      <img src="images3/Design13.png" alt="Design 13">
+      <img src="images3/Design14.png" alt="Design 14">
+      <img src="images3/Design15.png" alt="Design 15">
+      <img src="images3/Design16.png" alt="Design 16">
     </div>
   </div>
 </section>
